[tool.black]
line-length = 79

[tool.poetry]
name = "leasik"
version = "0.1.0"
description = "SRS to learn languages in context"
authors = ["Abhishek Kumar <abhi.kr.2100@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"
django-cors-headers = "^3.12.0"
django-cockroachdb = "^4.0.1"
whitenoise = "^6.1.0"
gunicorn = "^20.1.0"
graphene-django = "^2.15.0"
django-graphql-jwt = "^0.3.4"
ipython = "^8.4.0"
PyICU = "^2.9"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.3.0"
radon = "^5.1.0"
flake8-pylint = "^0.1.3"
flake8-bandit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
